--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="container" class="f-grid"></div>
+    <div id="numeri"></div>
     <script src="./main.js"></script>
 </body>
 </html>
